Muestra el resultadogit status!

--- a/test.html
+++ b/test.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="serviciosTest.js"></script>
-        <script src="test.js"></script>
-    </head>
-    <body>
-        <div>
+
+<head>
+    <script src="serviciosTest.js"></script>
+    <script src="test.js"></script>
+</head>
+
+<body>
+    <div>
         <h3>NOMBRE</h3>
-        <input type="text" id="txtNombre"/>
-        </div>
-        <div>
+        <input type="text" id="txtNombre" />
+    </div>
+    <div>
         <h3>APELLIDO</h3>
-        <input type="text" id="txtApellido"/>
-        </div>
-        <p>
-        <input type="button" value="Saludar" onclick="saludar();"/>
-        </p>
-    </body>
+        <input type="text" id="txtApellido" />
+    </div>
+    <p>
+        <input type="button" value="Saludar" onclick="saludar();" />
+    </p>
+
+    <h4>RESULTADO</h4>
+    <h4 id="lbResultado"></h4>
+</body>
+
 </html>
