inclusion de estilos

--- a/test.html
+++ b/test.html
@@ -2,25 +2,64 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="notas.css" />
     <script src="serviciosTest.js"></script>
     <script src="test.js"></script>
 </head>
 
 <body>
-    <div>
-        <h3>NOMBRE</h3>
-        <input type="text" id="txtNombre" />
-    </div>
-    <div>
-        <h3>APELLIDO</h3>
-        <input type="text" id="txtApellido" />
-    </div>
-    <p>
-        <input type="button" value="Saludar" onclick="saludar();" />
-    </p>
 
-    <h4>RESULTADO</h4>
-    <h4 id="lbResultado"></h4>
+    <div class="principal">
+        <div class="logoEscuela">
+            <img src="./imagenes/logoKrakeDev.png" width="50%" />
+        </div>
+
+        <div class="contenido">
+            <div class="titulo">
+                PRIMERA TRABAJO EN GRUPO
+            </div>
+
+            <div class="ingresoDatos">
+                <div class="tituloCampo">
+                    NOMBRE
+                </div>
+                <div>
+                    <input type="text" class="cajaTexto" id="txtNombre" />
+                </div>
+            </div>
+
+            <div class="ingresoDatos">
+                <div class="tituloCampo">
+                    APELLIDO
+                </div>
+                <div>
+                    <input type="text" class="cajaTexto" id="txtApellido" />
+                </div>
+            </div>
+
+            <div class="botones">
+                <div class="contenedorBoton">
+                    <input type="button" value="Saludar" class="estiloBoton" onclick="saludar();" />
+                </div>
+            </div>
+
+            <div class="areaResultado">
+                <div class="resultado">
+                    <div>
+                        RESULTADO:
+                    </div>
+                    <div id="lbResultado">
+
+                    </div>
+                </div>
+
+                <div class="imagenResultado">
+                    <img src="./imagenes/grupo.png" width="50%" />
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
